--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>StarWarsApi</title>
+  <title>Star Wars Character Bios</title>
   <base href="/">
-
+  <meta name="theme-color" content="#16161d">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
