add store for caching characters locally, update favicons

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#16161d">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
